# niepce-maya

./: CMakeLists.txt  niepce.mod
scripts/: hypershade_callbacks.py  niepce_renderer.py
src/accelerator/: CMakeLists.txt  bvh.cc
src/bxdf/: CMakeLists.txt  lambert.h
src/camera/: camera.h  film.cc  film.h
src/core/: CMakeLists.txt  geometry.h  niepce.h  transform.cc
src/integrator/: CMakeLists.txt  path_tracer.cc
src/light/: CMakeLists.txt
src/material/: CMakeLists.txt  matte.cc  matte.h
src/maya/: CMakeLists.txt  accessor.cc  accessor.h  defines.h  matte_shader.cc  matte_shader.h  plugin_main.cc  render_view.cc  render_view.h  renderer_command.cc  renderer_command.h
src/memory/: CMakeLists.txt  arena_allocator.cc  arena_allocator.h
src/primitive/: CMakeLists.txt  aggregate.cc  individual.cc
src/random/: CMakeLists.txt
src/sampler/: CMakeLists.txt
src/scene/: CMakeLists.txt
src/shape/: CMakeLists.txt  sphere.cc  triangle.cc  triangle.h
src/texture/: CMakeLists.txt
